Fixed media query alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ p {
 }
 
 @media (max-width: 1028px) {
-    #title {
+    #title .container-fluid{
         text-align: center;
     }
 
